# psychic_rag_doe

./: .gitignore  README.md  main.py  pyproject.toml  rag_chunk_doe.ipynb  rag_chunk_doe_results.csv  rag_doe_2.ipynb  rag_doe_factorial_results.csv  rag_gold_dataset.csv
